k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ooblex
  labels:
    app: ooblex
    environment: production
